can login to see if card is due

--- a/app/templates/interface.html
+++ b/app/templates/interface.html
@@ -1,4 +1,10 @@
-<p>Japanese Kanji List</p>
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
+<html> <head>
+<title>Study Japanese</title>
+</head>
+
+<body>
+<h1>Gogo Kanji 午後漢字</h1>
 <div class=row>
     <div class="col-xs-6 col-md-4">
 <table align = "center">
@@ -17,3 +23,10 @@
 </table>
 </div>
 </div>
+
+
+
+<hr>
+<address></address>
+<!-- hhmts start -->Last modified: Mon Feb 13 13:48:21 EST 2017 <!-- hhmts end -->
+</body> </html>
