--- a/app/templates/interface.html
+++ b/app/templates/interface.html
@@ -20,7 +20,16 @@
     {% endfor %}
     </tr>
 {% endfor %}
+    <h2>Kanji</h2>
+    <p>{{card}}</p>
+<form method="POST" action="/">
+    {{ form.hidden_tag() }}
+    <div style = "text-align:center";> {{ form.answerBox.label }} : {{ form.answerBox() }} </div>
+    <div style = "text-align:center";> {{ "Enter Answer"}} : {{ form.submitAnswer() }} </div>
+</form>
+
 </table>
+
 </div>
 </div>
 
@@ -28,5 +37,5 @@
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Mon Feb 13 13:48:21 EST 2017 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sun Mar  5 21:15:52 EST 2017 <!-- hhmts end -->
 </body> </html>
