--- a/app/templates/interface.html
+++ b/app/templates/interface.html
@@ -1,3 +1,4 @@
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8>
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html> <head>
 <title>Study Japanese</title>
@@ -37,5 +38,5 @@
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Sun Mar  5 21:15:52 EST 2017 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sun Apr 16 22:47:41 EDT 2017 <!-- hhmts end -->
 </body> </html>
